# brand-compliacne-llmops-with-Azure

./: README.md  main.py  pyproject.toml
backend/src/api/: server.py  telemetry.py
backend/src/graph/: state.py
backend/src/services/: test_video_indexer.py  video_indexer.py
